[package]
name = "pz-map-tool"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["Zefira Shannon <zefira@hey.com>"]
edition = "2021"

categories = ["command-line-utilities", "game-development"]
keywords = ["project-zomboid"]

description = "A simple CLI tool for working with the map in Project Zomboid save files and mods."
readme = "README.md"


[features]
default = ["cli"]
cli = ["dep:clap"]
serde = ["dep:serde"]

[dependencies]
clap = { version = "4.4.14", features = ["derive"], optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
test-case = "3.3.1"

[[bin]]
name = "pz-map-tool-cli"
path = "src/main.rs"
test = false
doctest = false
bench = false
required-features = ["cli"]
